--- a/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/Game Control Panel.csproj
+++ b/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/Game Control Panel.csproj
@@ -72,6 +72,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ScoreControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="ScoreControl.Designer.cs">
+      <DependentUpon>ScoreControl.cs</DependentUpon>
+    </Compile>
     <Compile Include="UserInterface.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -81,6 +87,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
+    <EmbeddedResource Include="ScoreControl.resx">
+      <DependentUpon>ScoreControl.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="UserInterface.resx">
       <DependentUpon>UserInterface.cs</DependentUpon>
     </EmbeddedResource>
