--- a/Game Control Panel/UML Diagrams/State Diagram.graffle/data.plist
+++ b/Game Control Panel/UML Diagrams/State Diagram.graffle/data.plist
@@ -18,9 +18,13 @@
 	<key>GuidesVisible</key>
 	<string>YES</string>
 	<key>ImageCounter</key>
-	<integer>5</integer>
+	<integer>9</integer>
 	<key>ImageLinkBack</key>
 	<array>
+		<dict/>
+		<dict/>
+		<dict/>
+		<dict/>
 		<dict/>
 		<dict/>
 		<dict/>
@@ -28,6 +32,10 @@
 	</array>
 	<key>ImageList</key>
 	<array>
+		<string>image8.PNG</string>
+		<string>image7.PNG</string>
+		<string>image6.PNG</string>
+		<string>image5.PNG</string>
 		<string>image4.PNG</string>
 		<string>image3.PNG</string>
 		<string>image2.PNG</string>
@@ -40,7 +48,7 @@
 	<key>MasterSheets</key>
 	<array/>
 	<key>ModificationDate</key>
-	<string>2014-02-14 19:02:01 +0000</string>
+	<string>2014-02-15 04:01:56 +0000</string>
 	<key>Modifier</key>
 	<string>David Sutton</string>
 	<key>NotesVisible</key>
@@ -697,7 +705,7 @@ Button}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc
 
-\f0\b\fs24 \cf0 Timer Stoped}</string>
+\f0\b\fs24 \cf0 Timer Stopped}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
@@ -2574,7 +2582,7 @@ Button}</string>
 {\colortbl;\red255\green255\blue255;}
 \pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\qc
 
-\f0\b\fs24 \cf0 Timer Stoped}</string>
+\f0\b\fs24 \cf0 Timer Stopped}</string>
 						<key>VerticalPad</key>
 						<integer>0</integer>
 					</dict>
@@ -3115,7 +3123,7 @@ Button}</string>
 					<key>ID</key>
 					<integer>32</integer>
 					<key>ImageID</key>
-					<integer>4</integer>
+					<integer>8</integer>
 					<key>Magnets</key>
 					<array>
 						<string>{0, 1}</string>
@@ -3450,7 +3458,7 @@ Button}</string>
 					<key>ID</key>
 					<integer>29</integer>
 					<key>ImageID</key>
-					<integer>3</integer>
+					<integer>7</integer>
 					<key>Magnets</key>
 					<array>
 						<string>{0, 1}</string>
@@ -3626,7 +3634,7 @@ Button}</string>
 					<key>ID</key>
 					<integer>11</integer>
 					<key>ImageID</key>
-					<integer>2</integer>
+					<integer>6</integer>
 					<key>Magnets</key>
 					<array>
 						<string>{0, 1}</string>
@@ -3665,7 +3673,7 @@ Button}</string>
 					<key>ID</key>
 					<integer>8</integer>
 					<key>ImageID</key>
-					<integer>1</integer>
+					<integer>5</integer>
 					<key>Magnets</key>
 					<array>
 						<string>{0, 1}</string>
@@ -3837,11 +3845,11 @@ Button}</string>
 	<key>WindowInfo</key>
 	<dict>
 		<key>CurrentSheet</key>
-		<integer>2</integer>
+		<integer>0</integer>
 		<key>ExpandedCanvases</key>
 		<array/>
 		<key>Frame</key>
-		<string>{{251, 47}, {710, 731}}</string>
+		<string>{{62, 47}, {710, 731}}</string>
 		<key>ListView</key>
 		<true/>
 		<key>OutlineWidth</key>
