--- a/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
+++ b/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
@@ -11,24 +11,25 @@
     <AssemblyName>Game Control Panel</AssemblyName>
     <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <IsWebBootstrapper>false</IsWebBootstrapper>
+    <IsWebBootstrapper>true</IsWebBootstrapper>
     <TargetFrameworkProfile />
-    <PublishUrl>C:\Users\David\Documents\GitHub\EE491\Game Control Panel\Installers\Test Installer Version 1.1\</PublishUrl>
+    <PublishUrl>ftp://www.davidsutton.cn/public_html/robotag/</PublishUrl>
     <Install>true</Install>
-    <InstallFrom>Disk</InstallFrom>
-    <UpdateEnabled>false</UpdateEnabled>
+    <InstallFrom>Web</InstallFrom>
+    <UpdateEnabled>true</UpdateEnabled>
     <UpdateMode>Foreground</UpdateMode>
     <UpdateInterval>7</UpdateInterval>
     <UpdateIntervalUnits>Days</UpdateIntervalUnits>
     <UpdatePeriodically>false</UpdatePeriodically>
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
-    <SupportUrl>http://www.DavidSutton.cn/robotag</SupportUrl>
+    <InstallUrl>http://www.davidsutton.cn/robotag/</InstallUrl>
+    <SupportUrl>http://www.DavidSutton.cn/robotag/help</SupportUrl>
     <ProductName>Game Control Panel</ProductName>
     <PublisherName>Robotag</PublisherName>
+    <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <OpenBrowserOnPublish>false</OpenBrowserOnPublish>
-    <ApplicationRevision>28</ApplicationRevision>
+    <ApplicationRevision>30</ApplicationRevision>
     <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
