Game Control Panel Version 1.1
Releasing Game Control Panel Version 1.1
New Features:
Added about menu for accessing version information.
Added a help file.
More detailed score information showing how many times a player was shot
by each of their opponents.
Displays version information in score file.
Displays helpful tooltips when a user hovers over a control with their
mouse.
Checks for updates from http://www.davidsutton.cn/robotag
Downloadable from http://www.davidsutton.cn/robotag

--- a/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
+++ b/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
@@ -24,12 +24,14 @@
     <UpdateRequired>false</UpdateRequired>
     <MapFileExtensions>true</MapFileExtensions>
     <InstallUrl>http://www.davidsutton.cn/robotag/</InstallUrl>
+    <UpdateUrl>http://www.davidsutton.cn/robotag/</UpdateUrl>
     <SupportUrl>http://www.DavidSutton.cn/robotag/help</SupportUrl>
     <ProductName>Game Control Panel</ProductName>
     <PublisherName>Robotag</PublisherName>
     <CreateWebPageOnPublish>true</CreateWebPageOnPublish>
     <WebPage>publish.htm</WebPage>
-    <ApplicationRevision>30</ApplicationRevision>
+    <AutorunEnabled>true</AutorunEnabled>
+    <ApplicationRevision>38</ApplicationRevision>
     <ApplicationVersion>1.1.0.%2a</ApplicationVersion>
     <UseApplicationTrust>false</UseApplicationTrust>
     <CreateDesktopShortcut>true</CreateDesktopShortcut>
@@ -56,10 +58,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestCertificateThumbprint>F2B8B1B33F09EDE3FC8ACE9BBC9F56F00134A2CD</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>111A4EF478E612B1FF3B54BD31A3F0D9721EC6DD</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>Game Control Panel_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>GameControlPanel_TemporaryKey.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>true</GenerateManifests>
@@ -94,8 +96,15 @@
   <PropertyGroup />
   <PropertyGroup />
   <PropertyGroup />
+  <PropertyGroup />
   <PropertyGroup>
-    <NoWin32Manifest>true</NoWin32Manifest>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup />
+  <PropertyGroup />
+  <PropertyGroup />
+  <PropertyGroup>
+    <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -143,10 +152,10 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <None Include="Game Control Panel_TemporaryKey.pfx" />
     <Content Include="GameControlPanelHelp.chm">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="GameControlPanel_TemporaryKey.pfx" />
     <None Include="Properties\app.manifest" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
