Translated Game Control Panel into Chinese for Version 1.2
I did about 75% of this translation based on my existing knowledge of
Mandarin and the other 25% using translation tools. I have tested this,
but I will need to go over my work with one of my software developer
friends who is a native Chinese speaker (so they can correct my
Chinese). This is also scalable to any language and any number of
languages through the custom translation class.

--- a/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
+++ b/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
@@ -127,6 +127,7 @@
     <Compile Include="ScoreControl.Designer.cs">
       <DependentUpon>ScoreControl.cs</DependentUpon>
     </Compile>
+    <Compile Include="Translation.cs" />
     <Compile Include="UserInterface.cs">
       <SubType>Form</SubType>
     </Compile>
