--- a/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
+++ b/Game Control Panel/Visual Studio 2012 Project/Game Control Panel/GameControlPanel.csproj
@@ -121,6 +121,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="RobotVideo.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="RobotVideo.Designer.cs">
+      <DependentUpon>RobotVideo.cs</DependentUpon>
+    </Compile>
     <Compile Include="ScoreControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -137,6 +143,9 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Timer.cs" />
+    <EmbeddedResource Include="RobotVideo.resx">
+      <DependentUpon>RobotVideo.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="ScoreControl.resx">
       <DependentUpon>ScoreControl.cs</DependentUpon>
     </EmbeddedResource>
